--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 		<span class="bg parallax-top" data-parallax="4"></span>
 		<div class="container questions">
 			<div class="left text-right eff fadeInLeft" data-wow-duration=".6s" data-wow-delay=".1s" data-wow-offset="250">
-				<h4>LADGER NEDİR?</h4>
+				<h4>LEDGER NEDİR?</h4>
 				<p>Kripto varlıklarınızı güvenilir bir şekilde saklamanızı sağlayan offline cüzdandır. Böylece, kripto paranızı yanınızda taşıyabilirsiniz.</p>
 				<h4 class="mt-xl-5 mt-3">NEDEN LEDGER HEDİYESİ?</h4>
                 <p>Icrypex’in önceliği yatırımlarınızın güvenliğini en üst düzeyde tutmaktır. Ledger, piyasada bulunan en iyi donanım cüzdandır.</p>
@@ -276,17 +276,17 @@
 					<div class="d-flex items fadeInLeft eff flex-row-reverse flex-lg-row" data-wow-duration=".6s" data-wow-delay=".1s" data-wow-offset="200">
 						<div class="content">
 							<h4 class="border-bt ht2">HIZLI PLATFORM</h4>
-							<p>Borsalarda hız en önemli unsurdur. Icrypex platformunda milisaniyeler içerisinde emrinizin işleme girer, limit emirleriniz uygun fiyat ile buluştuğunda gerçekleşir. Saniyeler içerisinde para yatırıp, çekebilirsiniz.</p>
+							<p>Borsalarda hız en önemli unsurdur. Icrypex platformunda milisaniyeler içerisinde emriniz işleme girer, limit emirleriniz uygun fiyat ile buluştuğunda gerçekleşir. Saniyeler içerisinde para yatırıp, çekebilirsiniz.</p>
 						</div>
 						<div class="iconwrap ml-lg-3 mr-lg-0 mr-3">
-							<img src="assets/img/icons/Speed_Icon.svg" alt="">
+							<img src="https://www.icrypex.com/asset-lp/trade_and_win/img/icons/Speed_Icon.svg" alt="">
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-5 mt-lg-0 mt-4">
 					<div class="d-flex items fadeInRight eff" data-wow-duration=".6s" data-wow-delay=".1s" data-wow-offset="200">
 						<div class="iconwrap mr-3">
-							<img src="assets/img/icons/Freeze_Icon.svg" alt="">
+							<img src="https://www.icrypex.com/asset-lp/trade_and_win/img/icons/Freeze_Icon.svg" alt="">
 						</div>
 						<div class="content">
 							<h4 class="border-bt ht2">SOĞUK CÜZDAN</h4>
@@ -303,14 +303,14 @@
 							<p>2 adımlı doğrulama, kişisel veri güvenliğinin son noktalarından biridir. 2FA ile hesabınıza girerken bir güvenlik katmanı daha eklemiş olursunuz. Böylece sadece sizin için oluşturulan doğrulama kodu ile hesabınıza giriş yaparsınız.</p>
 						</div>
 						<div class="iconwrap ml-lg-3 mr-lg-0 mr-3">
-							<img src="assets/img/icons/2FA_Icon.svg" alt="">
+							<img src="https://www.icrypex.com/asset-lp/trade_and_win/img/icons/2FA_Icon.svg" alt="">
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-5 mt-lg-0 mt-4">
 					<div class="d-flex items fadeInRight eff" data-wow-duration=".6s" data-wow-delay=".1s" data-wow-offset="200">
 						<div class="iconwrap mr-3">
-							<img src="assets/img/icons/Icon_Digital_Wallet.svg" alt="">
+							<img src="https://www.icrypex.com/asset-lp/trade_and_win/img/icons/Icon_Digital_Wallet.svg" alt="">
 						</div>
 						<div class="content">
 							<h4 class="border-bt ht2">GERÇEK CÜZDAN</h4>
@@ -327,14 +327,14 @@
 							<p>İşlem boyutlarını küçülterek, işlem hızını ve sınırlı blok büyüklüğünü en verimli şekilde kullanan bir teknoloji sunuyoruz. Böylece kripto para transferleriniz göz açıp kapayıncaya kadar gerçekleşmiş oluyor.</p>
 						</div>
 						<div class="iconwrap ml-lg-3 mr-lg-0 mr-3">
-							<img src="assets/img/icons/Segwit_Icon.svg" alt="">
+							<img src="https://www.icrypex.com/asset-lp/trade_and_win/img/icons/Segwit_Icon.svg" alt="">
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-5 mt-lg-0 mt-4">
 					<div class="d-flex items fadeInRight eff" data-wow-duration=".6s" data-wow-delay=".1s" data-wow-offset="200">
 						<div class="iconwrap mr-3">
-							<img src="assets/img/icons/Deep Icon.svg" alt="">
+							<img src="https://www.icrypex.com/asset-lp/trade_and_win/img/icons/Deep Icon.svg" alt="">
 						</div>
 						<div class="content">
 							<h4 class="border-bt ht2">YÜKSEK DERİNLİK</h4>
