Add Socila Media Icons

--- a/index.html
+++ b/index.html
@@ -351,11 +351,13 @@
 			<div class="bottom">
 				<span></span>
 			</div>
-			<div class="social-media mt-6 d-flex justify-content-center" style="display: none !important;">
-				<a class="fc" href="https://www.facebook.com/icrypex/" target="_blank"></a>
+			<div class="social-media mt-6 d-flex justify-content-center">
+				<a class="fc" href="https://facebook.com/icrypex/" target="_blank"></a>
 				<a class="tw" href="https://twitter.com/icrypex" target="_blank"></a>
-				<a class="ln" href="https://www.linkedin.com/company/icrypex-crypto-exchange/" target="_blank"></a>
 				<a class="ins" href="https://www.instagram.com/icrypex/" target="_blank"></a>
+				<a class="mdm" href="https://medium.com/@icrypex" target="_blank"></a>
+				<a class="ln" href="https://www.linkedin.com/company/icrypex-crypto-exchange/" target="_blank"></a>
+				<a class="tlgrm" href="https://t.me/icrypex_tr" target="_blank"></a>
 			</div>
 			<div class="text-center px-3">
 				<h3 class="font-weight-normal mt-5"><a href="tel:0850 255 1079" class="text-white">0850 255 1079</a></h3>
