--- a/index-two-column.html
+++ b/index-two-column.html
@@ -20,8 +20,8 @@
 	<div class="container-fluid banner">
 		<div class="container h-100 flex-column d-flex justify-content-center align-items-center">
 			<div class="eff fadeInUp2" data-wow-duration=".6s" data-wow-delay=".1s">
-				<h1>2 ŞANSLI KİŞİYE <br />LEDGER WALLET HEDİYESİ!</h1>
-				<h2>Kripto Sözlük, Icrypex Sponsorluğunda <br class="d-none d-sm-block" /><strong>2 Ledger Nano S</strong> Hediye Ediyor</h2>
+				<h1>4 ŞANSLI KİŞİYE <br />LEDGER WALLET HEDİYESİ!</h1>
+				<h2>Kripto Sözlük, Icrypex Sponsorluğunda <br class="d-none d-sm-block" /><strong>2 Ledger Nano S</strong> ve <strong>2 Ledger Nano X Hediye Ediyor</strong></h2>
 			</div>
 		</div>
 	</div>
@@ -69,7 +69,7 @@
 		</div>
 		<!-- Alert -->
 		<form action="" autocomplete="off" onsubmit="return submitValidForm()" novalidate>
-		<h2>LEDGER HEDİYESİNİ KAZANMAK İÇİN HEMEN FORMU DOLDURUN!</h2>
+		<h2>HER HAFTA DAĞITILACAK LEDGER HEDİYESİNİ KAZANMAK İÇİN HEMEN FORMU DOLDURUN!</h2>
 		<div class="d-flex inputs justify-content-center mt-2 mx-auto flex-column flex-lg-row">
 			<div id="iconFirstNameId" class="">
 				<input type="text" class="form-control" placeholder="İSİM" name="firstname" id="inputFirstNameId" required oninput="lpregisterform.verifyContent('inputFirstNameProcess','inputFirstNameId','msgFirstNameId','iconFirstNameId')" onfocusout="lpregisterform.verifyContentErrorDelete('inputFirstNameProcess','inputFirstNameId','msgFirstNameId','iconFirstNameId')">
@@ -224,7 +224,18 @@
 
 			<div class="ledger-logo"></div>
 
-			<div class="ledger-content ledger-content-right right eff fadeInRight" style="margin-top: 40px; margin-right: auto;" data-wow-duration=".6s" data-wow-delay=".1s" data-wow-offset="250">
+			<div class="ledger-content ledger-content-left left eff fadeInLeft" data-wow-duration=".6s" data-wow-delay=".1s" data-wow-offset="250">
+				<div class="content-img">
+					<img src="assets/img/Ledger_Nano_X.png" width="186" height="304" alt="Ledger Nano X" />
+				</div>
+				<div class="content-desc">
+					<h2>Ledger <strong>Nano X</strong></h2>
+					<h5>Yeni Nesil Kripto Cüzdan</h5>
+					<p>Yeni nesil kripto varlık cüzdanı. <strong>Ledger Nano X</strong> ile hareket halindeyken güvenli bir şekilde trade edin ve aynı anda çok sayıda kripto varlığı tek bir cihazla yönetin.</p>
+				</div>
+			</div>
+
+			<div class="ledger-content ledger-content-right right eff fadeInRight" data-wow-duration=".6s" data-wow-delay=".1s" data-wow-offset="250">
 				<div class="content-desc">
 					<h2>Ledger <strong>Nano S</strong></h2>
 					<h5>Dünyanın En Popüler Kripto Cüzdanı</h5>
@@ -253,8 +264,8 @@
 			<div class="right eff fadeInRight" data-wow-duration=".6s" data-wow-delay=".1s" data-wow-offset="250">
 				<h4 class="mt-xl-0 mt-3">LEDGER NEDEN ÖNEMLİDİR?</h4>
 				<p>İşlemlerinizi Ledger Live arayüzü ile yaptıktan sonra cüzdanınızı bilgisayarınızdan ayırırsınız. Böylece varlıklarınızı güvenle saklayabilirsiniz.</p>
-				<h4 class="mt-xl-5 mt-3">NANO S NEDİR?</h4>
-				<p>Ledger Nano S, bitcoin ve altcoinlerinizi depolamak, ödeme alıp göndermek ve kripto verilerinize yüksek güvenlik sağlamak gibi özellikleri olan bir fiziksel donanım cüzdanıdır.</p>
+				<h4 class="mt-xl-5 mt-3">NANO S VE NANO X NEDİR?</h4>
+				<p>Aynı anda 100 kripto parayı depolayabilen Nano X, Nano S’in gelişmiş bir versiyonudur. 2 adet Nano ve 2 Adet Nano S hediye ediyoruz.</p>
 			</div>
 		</div>
 		<div class="container">
