Slider Text Changed

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 	<div class="container-fluid banner">
 		<div class="container h-100 flex-column d-flex justify-content-center align-items-center">
 			<div class="eff fadeInUp2" data-wow-duration=".6s" data-wow-delay=".1s">
-				<h1>2 ŞANSLI KİŞİYE <br />LEDGER WALLET HEDİYESİ!</h1>
-				<h2>Kripto Sözlük, Icrypex Sponsorluğunda <br class="d-none d-sm-block" /><strong>2 Ledger Nano S</strong> Hediye Ediyor</h2>
+				<h1>1 ŞANSLI KİŞİYE <span class="text-warning">EYLÜL AYINA ÖZEL</span> <br />LEDGER WALLET HEDİYESİ!</h1>
+				<h2>Kripto Sözlük, Icrypex Sponsorluğunda <br class="d-none d-sm-block" /><strong>1 Ledger Nano S</strong> Hediye Ediyor</h2>
 			</div>
 		</div>
 	</div>
