--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 	}
 
 	function verifyValidEmail() {
-		var emailPattern	= /^(([^<>()\[\]\\.,;:\s@"]+(\.[^<>()\[\]\\.,;:\s@"]+)*)|(".+"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+		var emailPattern	= /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/g;
 
 		if(!document.getElementById('inputEmailId').value.match(emailPattern)){
 			document.getElementById('iconEmailId').classList.add("error");
