New Logo Changed

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 	<div class="container d-flex justify-content-center">
 		<div class="logoarea">
 			<div class="logoarea-cell">
-				<a href="https://www.icrypex.com/" title="ICRYPEX" rel="bookmark" target="_blank"><img src="assets/img/icrypex-logo.svg" alt="" class="logo"></a>
+				<a href="https://www.icrypex.com/" title="ICRYPEX" rel="bookmark" target="_blank"><img src="assets/img/icrypex-logo-v2.svg" alt="" class="logoicrypex"></a>
 			</div>
 			<div class="logoarea-cell">
-				<img src="assets/img/kriptosozluk-logo.png" alt="" class="logo">
+				<img src="assets/img/kriptosozluk-logo.png" alt="" class="logokriptosozluk">
 			</div>
 		</div>
 	</div>
@@ -371,7 +371,7 @@
 					<div>
 						<img src="assets/img/icons/Ziraat_Logo.svg" alt="">
 					</div>
-					<div>
+					<div class="d-none">
 						<img src="assets/img/icons/Odeabank_Logo.svg" alt="">
 					</div>
 					<div>
